--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,4 +1,4 @@
-<mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="tcs.fin.ap.controller.View1">
+<mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="tcs.fin.ap1.controller.View1">
     <Page title="View 1">
         <content>
             <SearchField id="idSearch" search="onSearch"></SearchField>
